--- a/_posts/2017-05-10-Laravel框架学习笔记之常用命令.md
+++ b/_posts/2017-05-10-Laravel框架学习笔记之常用命令.md
@@ -1,3 +1,12 @@
+---
+layout: post
+catalog: true
+tags:
+  - PHP
+  - Laravel
+  - artisan
+  - 编程
+---
 #####1、控制器（Controller） or 模型（Model）
 ```
 // 创建一个空控制器
