--- a/_posts/2017-05-12-Laravel框架学习笔记之框架特点.md
+++ b/_posts/2017-05-12-Laravel框架学习笔记之框架特点.md
@@ -1,3 +1,12 @@
+---
+layout: post
+catalog: true
+tags:
+  - PHP
+  - Laravel
+  - 编程
+---
+
 Laravel 是一个有着美好前景的年轻框架，它的社区充满着活力，相关的文档和教程完整而清晰，并为快速、安全地开发现代应用程序提供了必要的功能。在近几年对PHP 框架流行度的统计中，Laravel始终遥遥领先。那么是什么让Laravel成为最成功的PHP框架？
         2011 年，Taylor Otwell将Laravel作为一种包含全新现代方法的框架介绍给大家。Laravel最初的设计是为了面向MVC架构的，它可以满足如事件处理、用户 身份验证等各种需求。另外它还有一个由管理数据库强力支持，用于管理模块化和可扩展性代码的软件包管理器。Laravel以其简洁、优雅的特性赢得了大家 的广泛关注，无论是专家还是新手，在开发PHP项目的时候，都会第一时间的想到Laravel。本文我们将讨论为什么Laravel会成为最成功的PHP框架。
 
