--- a/_posts/2017-05-16-Laravel框架学习笔记之推荐理由.md
+++ b/_posts/2017-05-16-Laravel框架学习笔记之推荐理由.md
@@ -1,3 +1,12 @@
+---
+layout: post
+catalog: true
+tags:
+  - PHP
+  - Laravel
+  - 编程
+---
+
 laravel国外最火的框架，语法优雅。使用了大量设计模式，框架完全符合设计模式的五大基本原则（面向对象设计模式有5大基本原则：单一职责原则、开发封闭原则、依赖倒置原则、接口隔离原则、Liskov替换原则。），模块之间耦合度很低，服务容器可以方便的扩展框架功能以及编写测试。能快速开发出功能，自带各种方便的服务，比如数据验证、队列、缓存、数据迁移、测试、artisan 命令行等等，还有强大的 ORM 。
 
 Laravel注重代码的模块化和可扩展性。你可以在包含超过5500个程序包的Packalyst目录中找到你想要添加的任何文件。Laravel的目标是让你能够找到任何想要的文件。
