--- a/_posts/2017-05-19-Laravel框架学习笔记之项目文档编写规范.md
+++ b/_posts/2017-05-19-Laravel框架学习笔记之项目文档编写规范.md
@@ -1,3 +1,13 @@
+---
+layout: post
+catalog: true
+tags:
+  - PHP
+  - Laravel
+  - 规范
+  - 文档
+  - 编程
+---
 
 每一个项目都 **必须** 包含一个 `readme.md` 文件，`readme` 里书写这个项目的简单信息。作用主要有两个，一个是团队新成员可从此文件中快速获悉项目大致情况，另一个是部署项目时可以作为参考。
 
