--- a/_posts/2018-01-27-花生壳使用教程.md
+++ b/_posts/2018-01-27-花生壳使用教程.md
@@ -1,3 +1,12 @@
+---
+layout: post
+catalog: true
+tags:
+  - 内网穿透
+  - 工具
+  - 编程
+---
+
 ###花生壳
 ![image.png](https://upload-images.jianshu.io/upload_images/6943526-b382a5eea340ac20.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 花生壳是一个动态域名解析软件。当您安装并注册花生壳动态域名解析软件，无论您在任何地点、任何时间、使用任何线路，均可利用这一服务建立拥有固定域名和最大自主权的互联网主机。
