--- a/_posts/2019-05-06-在北京的早市儿上，我被治愈了.md
+++ b/_posts/2019-05-06-在北京的早市儿上，我被治愈了.md
@@ -9,6 +9,7 @@ tags:
   - 生活
   - 随笔
   - 修行
+  - 烟火气
 ---
 
 ![image](http://upload-images.jianshu.io/upload_images/6943526-e212591473db6378?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240) 
