--- a/_posts/2019-05-09-当代青年的恋爱观.md
+++ b/_posts/2019-05-09-当代青年的恋爱观.md
@@ -184,7 +184,7 @@ tags:
 
 正如古龙说的那样：**“一个人走投无路，就放他去菜市场”。**
 
-**4.关于大排档**
+#### **4.关于大排档**
 
 **“两杯啤酒下肚，故事从头摊开”**
 
@@ -220,7 +220,7 @@ tags:
 
 就好像昨晚痛快释放的自己，现在也能平静地面对生活。
 
-#### **写在最后：**
+#### **写在最后**
 
 越长大越发现，能够治愈成年人的既不是升职加薪，也不是飞去浪漫的土耳其。
 
