--- a/_posts/2019-04-19.面试技巧.md
+++ b/_posts/2019-04-19.面试技巧.md
@@ -1,10 +1,16 @@
-作者：阿瑞
-
-链接：https://www.zhihu.com/question/290543744/answer/636315003
-
-来源：知乎
-
-著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
+---
+layout: post
+title: "请你自我介绍一下你自己？"
+subtitle: "面试技巧 "
+date: 2019-04-15 
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 生活
+  - 随笔
+  - 亲情
+---
 
 1、请你自我介绍一下你自己？
 
