--- a/_posts/2019-05-11-你听过哪些印象比较深的情话？.md
+++ b/_posts/2019-05-11-你听过哪些印象比较深的情话？.md
@@ -1,4 +1,18 @@
-#### 你听过哪些印象比较深的情话？
+---
+layout: post
+title: "你听过哪些印象比较深的情话？"
+date: 2019-04-11 
+author: "fsoooo"
+catalog: true
+header-img: "img/5.jpg"
+header-mask: 0.4
+tags:
+  - 爱情
+  - 情感
+  - 随笔
+  - 知乎
+---
+
 
 喜宴上，婚礼主持人说，
 
