--- a/_posts/2019-05-11-你听过哪些印象比较深的情话？.md
+++ b/_posts/2019-05-11-你听过哪些印象比较深的情话？.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "你听过哪些印象比较深的情话？"
-date: 2019-04-11 
+date: 2019-05-11 
 author: "fsoooo"
 catalog: true
 header-img: "img/5.jpg"
@@ -12,6 +12,8 @@ tags:
   - 随笔
   - 知乎
 ---
+
+![image.png](https://upload-images.jianshu.io/upload_images/6943526-5264eb8bacd08365.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 
 喜宴上，婚礼主持人说，
@@ -61,6 +63,14 @@ tags:
 那个时候我偷穿着妈妈的裙子，
 
 用妈妈的口红把嘴巴涂的像鬼一样，
+
+![](https://upload-images.jianshu.io/upload_images/6943526-02a47fd35fa8fa5f.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![](https://upload-images.jianshu.io/upload_images/6943526-3acb1b8e111953d2.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+![](https://upload-images.jianshu.io/upload_images/6943526-d725c12e08e19663.jpeg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
+
 
 然后，我的王子来了，
 
