--- a/_posts/2019-04-08-止于流言.md
+++ b/_posts/2019-04-08-止于流言.md
@@ -1,3 +1,14 @@
+---
+layout: post
+title: "止于留言"
+date: 2019-04-08 
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 一日禅
+  - 品格
+---
 有人的地方就有江湖，许多八卦评价、议论纷纷，就是在这个圈子平地而起流传开来的。其实，流言并不可怕，可怕的是一辈子离不开人间烟火的你，还不知道该如何面对这些随时突如其来的中伤。
 
  
