--- a/_posts/2019-04-09-苦而不言，喜而不语.md
+++ b/_posts/2019-04-09-苦而不言，喜而不语.md
@@ -1,3 +1,15 @@
+---
+layout: post
+title: "苦而不言，喜而不语"
+date: 2019-04-09 
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 一日禅
+  - 品格
+---
+
 星云大师说：“一个愿意倾听你、对你的痛苦感同身受的人，远比那些否定你的想法、纠正你的人更能得到你的青睐，而能够将两者有机结合的善知识你不一定有福报遇得到。”
 
  
