--- a/_posts/2019-05-15.夜深人静，无人入眠的时候，我给未来的子女起名字.md
+++ b/_posts/2019-05-15.夜深人静，无人入眠的时候，我给未来的子女起名字.md
@@ -1,3 +1,14 @@
+---
+layout: post
+title: "独处和自由"
+date: 2019-04-10 
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 一日禅
+  - 品格
+---
 名字
 
 女诗经，男楚辞，文论语，武周易
