--- a/_posts/2019-04-10-独处与自由.md
+++ b/_posts/2019-04-10-独处与自由.md
@@ -1,3 +1,14 @@
+---
+layout: post
+title: "独处和自由"
+date: 2019-04-10 
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 一日禅
+  - 品格
+---
 叔本华有言：“只有当一个人独处的时候，他才可以完全成为自己。谁要是不爱独处，那他也就是不热爱自由，因为只有当一个人独处的时候，他才是自由的。”
 
  
