--- a/_posts/2019-05-16-你连菜市场都不逛，谈什么人间不值得.md
+++ b/_posts/2019-05-16-你连菜市场都不逛，谈什么人间不值得.md
@@ -41,7 +41,7 @@ tags:
 
 大铁锅里现烙的**玉米面锅贴**焦黄油亮，熏得表皮焦黑的**猪蹄**静候啃蹄人，现灌现卖的**血肠**硬核而诱惑，英年早逝的**笨鸡**和皮光毛亮的**活公鸡**相对无言，油炸**蚂蚱和蚕蛹**堆成金黄色的小山，五彩缤纷的**冻莓冻杏冻秋梨**，还有劳动人民永远的好朋友——**烤地瓜**在散发着淀粉烤制过后的香甜气息，边境处的菜市场还有各色美味**泡菜**供应……
 
-#### ![image](http://upload-images.jianshu.io/upload_images/6943526-b5cb7350f11e4728?imageMogr2/auto-orient/strip)
+![image](http://upload-images.jianshu.io/upload_images/6943526-b5cb7350f11e4728?imageMogr2/auto-orient/strip)
 
 **早市的精髓，就在于其违反人类睡懒觉本质的、极早的活跃时间。**
 
