--- a/_posts/2019-04-17-西南联大为何让人热泪盈眶.md
+++ b/_posts/2019-04-17-西南联大为何让人热泪盈眶.md
@@ -11,6 +11,8 @@ tags:
   - 读书
 ---
 
+#### （一）文化大迁移
+
 回首抗战岁月,中国的大地上,由东向西,真是一场史诗般波澜壮阔的大迁徙,这其中有无数读书人高昂着头颅、挺直着腰板在行走。
 
 世界上有哪个国家有过如此大规模的文化大转移?
@@ -22,8 +24,6 @@ tags:
 电影**《无问西东》**讲述了4代中国读书人的故事,感人至深,尤其是西南联大一段,尽显国家民族危难时刻,中国读书人的血性与风骨。
 
 **1938年4月,昆明,国立西南联合大学成立。**这是一所只存在了8年多时间的大学,却在中国人的记忆中有着无可替代的地位。80年过去了,提起 **西南联大** ,国人依然百感交集,热泪盈眶。
-
-##（一）
 
 ![](https://upload-images.jianshu.io/upload_images/6943526-bfaaa2c9d56ab34b.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
@@ -71,9 +71,9 @@ tags:
 
 　　这个“丰富精神世界”,是西南联大独有的气质。纵然国破家亡,但始终有一群人,在守护着中国的文脉,这支文脉不断,中国就不会亡。
 
-##（二）　
 
-　　**他们不得不离开北平。**
+
+#### （二）**他们不得不离开北平**
 
 ![](https://upload-images.jianshu.io/upload_images/6943526-189bbb2b83e0d5b9.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
@@ -99,11 +99,9 @@ tags:
 
 　　《野葫芦引》主人公之一的澹台玮,一个英俊少年,离开北平,就是因为难以忍受上学途中,要经过一个日军哨岗,哨岗上贴着的一圈告示,斗大的字,写的是:“每天清晨中小学生过此岗必需向皇军一鞠躬。”书上写道:“玮玮当时只有一个念头:不惜一切代价逃脱这种耻辱。”
 
-　　**到昆明去!到昆明去!**
 
-##（三）
 
-　　**到昆明去,道阻且长。**
+#### （三）到昆明去!到昆明去! **到昆明去,道阻且长。**
 
 　　小说《南渡记》中的路线是:从天津乘船,途经上海、香港和越南的海防、老街,到达昆明。这也是邓稼先当年的路线。但与西南联大联系在一起的,是著名的“文人长征”。
 
@@ -132,9 +130,11 @@ tags:
 
 　　这就是苦难的磨砺。
 
-##（四）
 
-　　《无问西东》中令人热泪长流的一幕是:王力宏饰演的富家子弟沈光耀,驾机撞向日舰。
+
+#### （四）西南联大校训：刚毅坚卓
+
+《无问西东》中令人热泪长流的一幕是:王力宏饰演的富家子弟沈光耀,驾机撞向日舰。
 ![](https://upload-images.jianshu.io/upload_images/6943526-28a581b1961ce306.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 　　今日南京中山陵还有一座“航空烈士公墓”,其中有多名西南联大的学生。《国立西南联合大学八百学子从军回忆》一书中列举了多名烈士的英名:“戴荣钜,1943级地质系,1944年6月在长沙与敌机作战时殉国；王文,1944级机械系,1944年8月在保卫衡阳战役中与敌机作战时殉国；吴坚,1944级航空系,1945年初在陕西与日寇飞机作战时殉国；崔明川,1944级机械系,1943年在美国受飞行训练时,失事撞山殉国；李嘉禾,1940年转入物理系二年级,1944年在美国受飞行训练时,不幸失事殉国……”
@@ -148,9 +148,9 @@ tags:
 
 　　《野葫芦引》系列第三部《西征记》,写的就是联大学生从军与残酷的滇西之战。第一部中的英俊少年澹台玮,在这一部已经是英武青年,他参军成了一名翻译,为了架设通讯线路,攀上电线杆,被敌人射中,最后在缺医少药的野战医院中溘然长逝。
 
-　**　澹台玮之死,最令人伤感,很多读者读到他牺牲一幕,都掩卷长叹:“我们的玮玮死了……”他是宗璞笔下最优秀的男子,中西合璧式教育下培养出的优秀青年,家境优越,为人善良谦逊,在生物学领域很受教授器重,前程大好,类似《无问西东》中的沈光耀。沈光耀是愤怒于日机的暴虐而毅然违背对母亲的承诺,加入空军；澹台玮参军,是梦想着能够打回北平老家,把那些逼着中国孩子鞠躬的“皇军”从家乡赶走,但是,他永远回不去了。**
+　**澹台玮之死,最令人伤感,很多读者读到他牺牲一幕,都掩卷长叹:“我们的玮玮死了……”他是宗璞笔下最优秀的男子,中西合璧式教育下培养出的优秀青年,家境优越,为人善良谦逊,在生物学领域很受教授器重,前程大好,类似《无问西东》中的沈光耀。沈光耀是愤怒于日机的暴虐而毅然违背对母亲的承诺,加入空军；澹台玮参军,是梦想着能够打回北平老家,把那些逼着中国孩子鞠躬的“皇军”从家乡赶走,但是,他永远回不去了。**
 
-　**　“没有足够的食粮/且使我们的鲜血去/没有热情的安慰/且拿我们的热血去/热血/是我们唯一的剩余……”这是联大经济系学生缪弘的诗作《血的灌溉》,他在抗战即将胜利之际,用自己的鲜血灌溉了祖国的大地。1945年7月底,他作为伞兵部队的一员,参与了收复广西平南县境内丹竹机场的战役,8月2日伞兵部队占领军事要点,全面打败守敌,收复丹竹机场。但在8月4日的一次战斗中,缪弘手持卡宾枪冲锋时,被敌人狙击手击中,不幸牺牲,年仅19岁。11天后,日军投降。**
+　**“没有足够的食粮/且使我们的鲜血去/没有热情的安慰/且拿我们的热血去/热血/是我们唯一的剩余……”这是联大经济系学生缪弘的诗作《血的灌溉》,他在抗战即将胜利之际,用自己的鲜血灌溉了祖国的大地。1945年7月底,他作为伞兵部队的一员,参与了收复广西平南县境内丹竹机场的战役,8月2日伞兵部队占领军事要点,全面打败守敌,收复丹竹机场。但在8月4日的一次战斗中,缪弘手持卡宾枪冲锋时,被敌人狙击手击中,不幸牺牲,年仅19岁。11天后,日军投降。**
 
 　　缪弘与哥哥缪中均是联大学生,同时从军抗日,被传为佳话。令人感慨的是,他们的父亲缪斌,却是著名的汉奸,抗战胜利后被枪决。兄弟二人当初报考西南联大时,在报名表上改掉了父亲的名字,才得以顺利录取。
 
@@ -161,6 +161,6 @@ tags:
 
 　　一代人有一代人的际遇,西南联大的那一代中国读书人,赶上了一个最糟糕的年代,但正因为有些无法选择,在民族大义之前,更能做勇敢的选择。无问西东,只循内心。如同缪弘《血的灌溉》之结尾:
 
-　**　“自由的大地是该用血来灌溉的/你/我/谁都不曾忘记。”**
+　**“自由的大地是该用血来灌溉的/你/我/谁都不曾忘记。”**
 
-　**　向那一代中国读书人致敬,如此真实,如此血性,如此元气淋漓。**
+　**向那一代中国读书人致敬,如此真实,如此血性,如此元气淋漓。**
