--- a/_posts/2019-05-18-三好差生《杨超越》.md
+++ b/_posts/2019-05-18-三好差生《杨超越》.md
@@ -5,7 +5,7 @@ subtitle: "独一无二的你，才是锦鲤本鲤。"
 date: 2019-05-18
 author: "fsoooo"
 catalog: true
-header-img: "img/2-bg.jpg"
+header-img: "img/2.jpg"
 header-mask: 0.4
 tags:
   - 修行
