--- a/_posts/2019-05-21-人生最好的状态是“小满”.md
+++ b/_posts/2019-05-21-人生最好的状态是“小满”.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "今日小满 | 人生最好的状态是小满"
+title: "人生最好的状态是小满"
 subtitle: "有人说：满足的状态是刚刚好，幸福的状态是比刚刚好再多一点。"
 date: 2019-05-21
 author: "fsoooo"
@@ -18,7 +18,7 @@ tags:
 
 ![image](http://upload-images.jianshu.io/upload_images/6943526-35f99e4f5cbe54bb?imageMogr2/auto-orient/strip)
 
-#### 人生最好的状态是小满
+#### 今日小满 | 人生最好的状态是小满
 
 
 
