--- a/_posts/2019-05-23-孤独与自由.md
+++ b/_posts/2019-05-23-孤独与自由.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "享受独处的自由"
-subtitle: "叔本华有言：“只有当一个人独处的时候，他才可以完全成为自己。谁要是不爱独处，那他也就是不热爱自由，因为只有当一个人独处的时候，他才是自由的。”真正优质的生活，并不只是经济上的富足，而是行为上的自由，精神上的满足，情绪上的愉悦，和心灵上的放松。独处，也能活出高格调，如何实现，就完全取决于个人了。"
+subtitle: "叔本华有言：“只有当一个人独处的时候，他才可以完全成为自己。谁要是不爱独处，那他也就是不热爱自由，因为只有当一个人独处的时候，他才是自由的。”"
 date: 2019-05-23 
 author: "fsoooo"
 catalog: true
