--- a/_posts/2019-05-24-周杰伦被逼唱《学猫叫》.md
+++ b/_posts/2019-05-24-周杰伦被逼唱《学猫叫》.md
@@ -5,7 +5,7 @@ subtitle: "“曾经最火热的流行歌，也已经被岁月改名叫复古。
 date: 2019-05-24
 author: "fsoooo"
 catalog: true
-header-img: "img/1.jpg"
+header-img: "img/zhoujielun.jpg"
 header-mask: 0.4
 tags:
   - 修行
