--- a/_posts/2019-05-27-所有的电影都是潮湿的.md
+++ b/_posts/2019-05-27-所有的电影都是潮湿的.md
@@ -5,7 +5,7 @@ subtitle: "我终于看懂王家卫电影宇宙~"
 date: 2019-05-27
 author: "fsoooo"
 catalog: true
-header-img: "img/fighting.jpeg"
+header-img: "img/fighting.jpg"
 header-mask: 0.4
 tags:
   - 电影
