--- a/_posts/2019-05-28-死亡不是终点，遗忘才是.md
+++ b/_posts/2019-05-28-死亡不是终点，遗忘才是.md
@@ -5,7 +5,7 @@ subtitle: "死亡不是终点，遗忘才是。"
 date: 2019-05-28
 author: "fsoooo"
 catalog: true
-header-img: "img/wangbuliao.jpg"
+header-img: "img/wangbuliao.jpeg"
 header-mask: 0.4
 tags:
   - 修行
@@ -49,6 +49,9 @@ tags:
 节目以一家餐厅为背景，由黄渤担任店长，5名平均年龄70多岁的老人担任服务员。
 
 虽然餐厅名字叫忘不了，但老人们都很健忘。
+
+![image](https://upload-images.jianshu.io/upload_images/6943526-2a09bbe190299037.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+
 
 69岁的珠珠姨经常大脑空白，不能表达出完整的意思，还把来做客的欧阳医生给忘了。
 
