--- a/_posts/2019-06-03-来得及or来不及.md
+++ b/_posts/2019-06-03-来得及or来不及.md
@@ -30,9 +30,6 @@ tags:
 
 话没说完，身边原本还在笑着的贾玲和沈腾，都落下泪来。
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-22abcbc6332d2c18?imageMogr2/auto-orient/strip)
-
-沈腾贾玲泪目 / 《王牌对王牌》
 
 王鸥自幼父母离异，一直和父亲生活。
 
@@ -46,15 +43,9 @@ tags:
 
 贾玲在台下泣不成声：“如果时光倒流就好了。”
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-95f804ab5f9e5816?imageMogr2/auto-orient/strip)
-
-“如果时光能倒流就好了” / 《王牌对王牌》
-
 但世上没有如果，时光也不可能倒流。
 
 <br/>
-
-![image](https://upload-images.jianshu.io/upload_images/6943526-5aef04257bc78f7b?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 #### 时光不能倒退，是多少人的遗憾
 
@@ -72,21 +63,12 @@ tags:
 
 见到喜欢的人会激动地跳起来；
 
-![image.gif](https://upload-images.jianshu.io/upload_images/6943526-55f362b230ef3287.gif?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-见到喜欢的人激动 / 《你好，李焕英》
 
 过日子又有点“抠”，不舍得花钱。
 
 舍不得买冰箱，总是吃快要化了的雪糕；
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-6384987dc72c3388?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-舍不得买冰箱 / 《你好，李焕英》
-
 老公想给她买“隔壁李婶儿的皮大衣”，她很喜欢却说“我不要”。
-
-![image](https://upload-images.jianshu.io/upload_images/6943526-c6849df9be35b5f3?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 小品的最后，她站在黑暗中和“妈妈”对话：
 
@@ -97,8 +79,6 @@ tags:
 “妈，我现在是一名喜剧演员，好多好多人喜欢我。”“妈知道。”
 
 **“妈，我好想你啊……”**
-
-![image](https://upload-images.jianshu.io/upload_images/6943526-53068dbe7aa08d9b?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 “现在我有能力给你富足的物质生活了，我事业有成了，可现在的我没有妈妈了。”
 
@@ -122,17 +102,12 @@ tags:
 
 只是多年后，再想起当初的选择，他感叹：“真的是遗憾。”
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-38f32830e97318e7?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-真的是遗憾 / 《金星秀》
 
 他离家很早，十几岁就孤身去了北京：“如果再给我一次机会，我不会出门那么早。”
 
 节目里，三姐带来了一笼家里做的馒头，岳云鹏边吃边哭：**“咱爹的味……”**
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-29444f589af93da2?imageMogr2/auto-orient/strip)
-
-爸爸曾经为了养家，每天起早贪黑地蒸馒头 / 《熟悉的味道》
+爸爸曾经为了养家，每天起早贪黑地蒸馒头
 
 一位博主发过一个互动话题：“如果让你回到十年前，有什么你后悔的事情，想去改变？”
 
@@ -140,21 +115,12 @@ tags:
 
 有人想每年带爸爸体检，用尽一切手段帮他戒烟；
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-118ba93c7d9126db?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240) 
-
-带爸爸体检 / 微博评论
 
 有人想告诉外公，生日那天别出远门、别开车；
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-0d13b0424af7ab34?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240) 
-
-“外公，我好想你” / 微博评论
 
 有人想回到两年前，给妈妈打个电话；
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-9bdd1c6bd2f57e8d?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-好想妈妈 / 微博评论
 
 对年轻人而言，时间很慢、未来很长，没有体味过生离死别，更是很少懂得提前珍惜。
 
@@ -172,8 +138,6 @@ tags:
 
 <br/>
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-f4f09455b3f8a64d?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
 #### “我怕努力太长，家人等不及”
 
 有人说，现在的年轻人自私，为了赚钱背井离乡不顾父母。
@@ -188,8 +152,6 @@ tags:
 
 **“仅有几万块钱的我意识到，有些时候钱是多么重要。”**
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-2f21174fb0988621?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
 李健演唱《父亲写的散文诗》 / 《歌手2017》
 
 微博上有一段很火的视频：
@@ -197,8 +159,6 @@ tags:
 地铁站里，小男孩弄丢了地铁票，年轻的妈妈对他大发雷霆，言语责骂，甚至动了手。
 
 路人看不下去，劝她：“你再买一张吧，别打孩子。”
-
-![image.gif](https://upload-images.jianshu.io/upload_images/6943526-22e6e7ca6afda8fd.gif?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 妈妈回答：“我没那么多钱啊。”
 
@@ -209,8 +169,6 @@ tags:
 打孩子固然不对，但她也有自己的心酸——单亲妈妈一个人带孩子已经很累，还要去做钟点工，一个月只赚900块。
 
 如果有条件，谁愿意因为5块钱的车票，大庭广众责骂自己的孩子？
-
-![image](https://upload-images.jianshu.io/upload_images/6943526-ee6a81dc5a2b0d9f?imageMogr2/auto-orient/strip)
 
 谁都想给自己、给父母、给孩子更好一点的生活，只是“钱好难赚啊”。
 
@@ -228,9 +186,7 @@ tags:
 
 **“我想让家人过上好的生活，但是我特别害怕，害怕努力的这个时间太长了，家人等不及。”** 
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-e268059c9beb405f?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-“你特别怕这个努力的时间太长了” / 《放开我baby》
+“你特别怕这个努力的时间太长了” 
 
 最让人心酸的，莫过于此：**孩子成长的速度跟不上父母衰老的速度。**
 
@@ -252,8 +208,6 @@ tags:
 
 <br/>
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-3feb1b894d81dcad?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
 #### “来得及”是成人世界最奢侈的三个字
 
 韩剧《请回答1997》里，独自离乡打拼的女主角闺蜜，为了能在都市立足，一年多没能回家。
@@ -266,19 +220,12 @@ tags:
 
 他担心女儿被工作单位解雇，担心自己的事情，耽误了女儿在首尔立足的梦想。
 
-![image](https://upload-images.jianshu.io/upload_images/6943526-62602c7fba0c1a50?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-爸爸临终前让女儿回去工作 / 《请回答1997》
 
 女儿在父亲葬礼上失声痛哭时，才幡然醒悟：
 
 **如果家人都不在了，我拼命工作，又在守护什么呢？**
 
 她劝朋友：“趁爸妈还在，好好孝敬他们吧，别像我一样后悔。”
-
-![image](https://upload-images.jianshu.io/upload_images/6943526-28116a834f1b9af1?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-趁爸妈还在好好孝敬他们 / 《请回答1997》
 
 你看，很多时候，父母是会理解子女背井离乡的：
 
@@ -295,10 +242,6 @@ tags:
 他们已经付出了一切，就别再让他们空等。
 
 柳岩说：**“如果亲人都健在的话，有什么都给他们吧，有什么话就都告诉他们吧。”**
-
-![image](https://upload-images.jianshu.io/upload_images/6943526-2657861fc5c0c043?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-柳岩“有什么都给他们吧” / 《王牌对王牌》
 
 **“来不及”的事情实在太多，“来得及”才显得尤为奢侈。**
 
