--- a/_posts/2019-06-01-孩子，如果有人打你，请务必打回去.md
+++ b/_posts/2019-06-01-孩子，如果有人打你，请务必打回去.md
@@ -15,7 +15,7 @@ tags:
 ---
 
 
-#### 01 
+#### 01 “看见别人打你，你就赶紧跑”
 
 前几天，一起校园暴力惨案震惊了所有人！
 
@@ -49,7 +49,9 @@ tags:
 
 也许，**仅仅是跑，已经不足以保护我们的孩子**。
 
-#### 02
+<br/>
+
+#### 02 “打人的都是坏孩子”
 
 儿子上幼儿园后，全家上下最担心的就是孩子被欺负。
 
@@ -93,7 +95,9 @@ tags:
 
 **我宁愿我的孩子做个“坏孩子”，也不想看到他老老实实地遍体鳞伤。**
 
-#### 03
+<br/>
+
+#### 03 “打回去”
 
 中国公安大学犯罪心理学专家李玫瑾教授曾做客《开讲啦》，观众提问：**如果孩子被打，您会支持他打回去嘛？** 
 
@@ -167,7 +171,7 @@ tags:
 
 这样，孩子才会拥有“打回去”的底气。
 
-#### 04
+#### 写在最后
 
 在孩子的成长过程中，冲突和处理冲突是永恒的主题。 
 
