--- a/_posts/2019-05-11-你听过哪些印象比较深的情话？.md
+++ b/_posts/2019-05-11-你听过哪些印象比较深的情话？.md
@@ -12,9 +12,7 @@ tags:
   - 随笔
   - 知乎
 ---
-
-![image.png](https://upload-images.jianshu.io/upload_images/6943526-5264eb8bacd08365.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
+![](/img/in-post/2019-05-11/1.png)
 
 喜宴上，婚礼主持人说，
 
@@ -26,15 +24,16 @@ tags:
 
 抱住她的肩膀轻轻亲了一下新娘的额头，
 
-我看见新娘抹了抹眼泪，
+我看见新娘抹了抹眼泪。
+
 
 然后听见她说：
 
 我很小的时候就会偷偷穿妈妈的裙子，
 
-或者裹上床单，偷抹口红，幻
+或者裹上床单，偷抹口红，
 
-想自己是美丽的新娘子，
+幻想自己是美丽的新娘子，
 
 然后我的王子来亲吻我。
 
@@ -64,13 +63,11 @@ tags:
 
 用妈妈的口红把嘴巴涂的像鬼一样，
 
-![](https://upload-images.jianshu.io/upload_images/6943526-02a47fd35fa8fa5f.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![](/img/in-post/2019-05-11/2.jpg)
 
-![](https://upload-images.jianshu.io/upload_images/6943526-3acb1b8e111953d2.jpg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+![](/img/in-post/2019-05-11/3.jpg)
 
-![](https://upload-images.jianshu.io/upload_images/6943526-d725c12e08e19663.jpeg?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
-
-
+![](/img/in-post/2019-05-11/4.jpeg)
 
 然后，我的王子来了，
 
