--- a/_posts/2019-06-16-我攒了19万，你添1万娶我吧.md
+++ b/_posts/2019-06-16-我攒了19万，你添1万娶我吧.md
@@ -44,6 +44,8 @@ tags:
 这是他们的第一次见面。
 
 
+![](/img/5.jpg)
+
 
 彼时，阿维22岁，明雅19岁，一个念大四，一个念大二。
 
@@ -112,6 +114,8 @@ tags:
 随后，明雅就正式成了阿维的女朋友。
 
 
+![](/img/6.jpg)
+
 
 **都说爱情是一场冒险，但世上总有值得去的冒险。**
 
@@ -160,6 +164,8 @@ tags:
 
 她有一个同样软弱的父亲，以及强势了一辈子的母亲。
 
+
+![](/img/4.jpg)
 
 
 **明雅害怕母亲，她对待她的方式，就像对待那些生病的小动物，全盘掌控，不容反抗的。**
@@ -238,6 +244,8 @@ tags:
 明雅越来越不快乐。
 
 
+![](/img/7.jpg)
+
 
 那种感觉是很微妙，难以向外人道明的。她像一只蜗牛，住在自己小小的壳里，可阿维却是属于辽阔天地的。
 
@@ -314,6 +322,8 @@ tags:
 
 他们一起去散步、健身，一起去周末露营，在阳台养了很多花，还领养了两只被主人遗弃的小狗，一只叫三毛，一只叫辛巴。
 
+
+![](/img/1.jpg)
 
 
 **阿维算了算银行卡里的钱，很认真地跟明雅说：“嫁给我吧，我存够20万了。”**
@@ -406,6 +416,8 @@ tags:
 
 五年恋情，戛然而止。
 
+
+![](/img/3.jpg)
 
 
 阿维回到了自己的家乡，父亲的身体垮了，他得把重担接过来。
@@ -570,3 +582,6 @@ tags:
 
 
 **她一直在等他，用一个女人最勇敢的方式。**
+
+
+![](/img/6.jpg)
