--- a/_posts/2019-07-01-《孙子兵法》：懂势，才能做事.md
+++ b/_posts/2019-07-01-《孙子兵法》：懂势，才能做事.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "《孙子兵法》：懂势，才能做事"
-subtitle: "注意力很贵，千万不要浪费"
+subtitle: "顺水行舟非舟快，顺风而呼非声疾"
 date: 2019-07-01
 author: "fsoooo"
 tags:
@@ -25,7 +25,7 @@ tags:
 
 > **俗话说：“火借风势，水借山势。”顺风时不必煽风点火，火就能凭借风势烧得很旺；顺水时不用划桨撑篙，船也能乘着波浪自在漂流。**
 >
-> **顺水行舟非舟快， 顺风而呼非声疾。** **草随风过仍挺拔， 水柔借势高山下。 若无实力硬碰硬， 敛聚锋芒待势发。**
+> **草随风过仍挺拔， 水柔借势高山下。 若无实力硬碰硬， 敛聚锋芒待势发。**
 
 
 
