--- a/_posts/2019-07-11-浅析“三观”.md
+++ b/_posts/2019-07-11-浅析“三观”.md
@@ -43,7 +43,7 @@ tags:
 
 **想想高考前的我们简直无所不能，求得了函数与数列，古文诗歌滚瓜烂熟，通晓古今中外，上知天文下知地理，掌握化学元素，了解生命起源，各种物理定律手到擒来。**
 
-我一直觉得中国的教育，虽然给我们灌输了那么多的知识，却从未给我们竖立一个正确的三观，这样说或许不对，因为什么才是正确的呢？
+中国的教育，虽然给我们灌输了那么多的知识，却从未给我们竖立一个正确的三观，这样说或许不对，因为什么才是正确的呢？
 
 应该说中国的教育，从未引导我们去真正的思考三观问题。
 
@@ -57,17 +57,17 @@ tags:
 
 虽然三者模糊不清，但我个人觉得：
 
-* 人生观，应该是父母启蒙的；
+* **人生观，应该是父母启蒙的；**
 
-* 世界观，应该是学校教育的；
+* **世界观，应该是学校教育的；**
 
-* 而价值观，是自己摸索的。
+* **而价值观，是自己摸索的。**
 
 但当然，三者也是互相穿插，互相启迪的，最最重要的，还是要看自己。
 
 饶越有句话讲的非有意思：**道理这个东西就像一个妓女，当天晚上她给了你安慰，可第二天起床的时候，你连她胸围的尺寸都忘得一干二净**。
 
-我对这句话有两层理解，一是什么大道理都是狗屁，它只是让你暂时的站在道德的制高点或者其他方面获得快感，最终你还是该笑笑该哭哭，跟随自己的心意，怂。
+我对这句话有两层理解：一是什么大道理都是狗屁，它只是让你暂时的站在道德的制高点或者其他方面获得快感，最终你还是该笑笑该哭哭，跟随自己的心意，怂；
 
 还有一层理解是，什么道理，什么至理名言都是没有用的，只有你自己真正的体验成功与失败，快乐与悲伤，自己去摸爬滚打，自己去痛定思痛，才能成为你自己的三观，融化进你的血液。
 
@@ -83,9 +83,9 @@ tags:
 
 有两段话对我帮助很大，跟大家分享一下。
 
-①	我们坚持一件事情，并不是因为这样做了会有效果，而是坚信，这样做是对的。——哈维尔（哲学家，话剧家，捷克总统）
+①	**我们坚持一件事情，并不是因为这样做了会有效果，而是坚信，这样做是对的。——哈维尔（哲学家，话剧家，捷克总统）**
 
-②	我们一路奋战，不是为了改变这个世界，而是为了不让世界改变我们。——《熔炉》（韩国电影排行榜第一的电影）
+②	**我们一路奋战，不是为了改变这个世界，而是为了不让世界改变我们。——《熔炉》（韩国电影排行榜第一的电影）**
 
 <br/>
 
@@ -107,19 +107,21 @@ tags:
 
 这应该就是我人生观最早的启蒙。
 
+<br/>
+
 书面的讲，人生观主要是人生目的、人生态度和人生价值三个方面。
 
 而我觉得，人生观只有一个，就是态度。
 
-我有一个朋友叫王小欢，他的一句话很有意思，不真诚，就滚蛋，这句话和他的2B青年形象也很符合。这，就是他的态度。
+我的人生观就很简单，热爱生活。这么简单的一句话，我在不同的阶段都会有不同的理解。
+
+
+
+我的人生观就很简单，热爱生活，热爱并悦纳苦乐生活。这么简单的一句话，我在不同的阶段都有不同的理解和行动，有时候想，如果我少胳膊断腿的，我还能这么热爱吗？真正的热爱，不是在顺风顺水的时候，而是在你遇到艰难险阻甚至于迫害的时候，所体现出来的精神，就像电影《美丽人生》，讲述了意大利一对犹太父子被送进纳粹集中营，父亲不忍年仅五岁的儿子饱受惊恐，利用自己丰富的想像力扯谎说他们正身处一个游戏当中，必须接受集中营中种种规矩以换得分数赢取最后大奖。身处那样的恐怖环境之中，这位伟大的父亲还能保持如此的乐观，不得不让人折服。
 
 <br/>
 
 周国平在《人生哲思录》说：我的人生观若要用一句话概括，就是真性情。我从来不把成功看作人生的主要目标，觉得只有活出真性情才是没有虚度了人生。
-
-我的人生观就很简单，热爱生活，热爱并悦纳苦乐生活。这么简单的一句话，我在不同的阶段都有不同的理解和行动。有时候想，如果我少胳膊断腿的，我还能这么热爱吗。
-
-真正的热爱，不是在顺风顺水的时候，而是在你遇到艰难险阻甚至于迫害的时候，所体现出来的精神，就像电影《美丽人生》，讲述了意大利一对犹太父子被送进纳粹集中营，父亲不忍年仅五岁的儿子饱受惊恐，利用自己丰富的想像力扯谎说他们正身处一个游戏当中，必须接受集中营中种种规矩以换得分数赢取最后大奖。身处那样的恐怖环境之中，这位伟大的父亲还能保持如此的乐观，不得不让人折服。
 
 当然人难免都有陷入困境，想不开的时候，这里我可以跟大家分享一下我的自我安慰疗法。
 
@@ -163,17 +165,19 @@ tags:
 
 奥巴马的医保法案，也就是全民医保，体现了对弱势群体的关注，主要受益人是目前仍游离于医保体系之外的5000万低收入群体。但是，有受益者就有既得利益受损者。该法案令中产阶级和高收入阶层成为埋单者，他们目前享有的医保水平会因此下降，支付的保费却大幅上涨，不少人抱怨难以承受。这样一来，中产阶级和高收入阶层与社会底层的弱势群体间凸显了前所未有的隔阂。
 
-我说的偏激一点，为了便于理解。左派认为人人平等，每个人都能享受权益，特别是照顾弱势群体，这才是公平。右派认为每个人要靠自己奋斗，财富是自己积累的，坚持个人自由，这才是公平。这两种意识形态，也是社会上普遍存在的主流价值观。
+我说的偏激一点，左派认为人人平等，每个人都能享受权益，特别是照顾弱势群体，这才是公平。右派认为每个人要靠自己奋斗，财富是自己积累的，坚持个人自由，这才是公平。这两种意识形态，也是社会上普遍存在的主流价值观。
 
 <br/>
 
 这个大的就不多说了，还是回归到个体上来。
 
-有些人经常把价值和价格搞混了，特别是商品，不都是明码标价么。
+有些人经常把价值和价格搞混了，特别是商品，不都是明码标价的吗。
 
 而价值和价格，也是两个非常有趣的辩证关系。我觉得阐述这个东西，必须要用到经济学里的“效用”。
 
-效用是指对于消费者通过消费或者享受闲暇等使自己的需求、欲望等得到的满足的一个度量。举个例子，你口渴的时候喝，喝第一杯水，效用是10，第二杯是5，第三杯是1，第四杯可能就是负数了。而一杯水的价格是整个市场供求关系所确定下来的，这个需求，是广大人民的平均效用。但对个体来说，效用的偏差其实相差很大。
+效用是指对于消费者通过消费或者享受闲暇等使自己的需求、欲望等得到的满足的一个度量。
+
+举个例子，你口渴的时候喝，喝第一杯水，效用是10，第二杯是5，第三杯是1，第四杯可能就是负数了。而一杯水的价格是整个市场供求关系所确定下来的，这个需求，是广大人民的平均效用。但对个体来说，效用的偏差其实相差很大。
 
 就像一场话剧，有的人觉得很有价值，带给了他一场精神的盛宴，而有的人索然寡味，看的昏昏欲睡，一文不值。但是票价都是一样的，价格是一样的。
 
@@ -197,7 +201,7 @@ tags:
 
 * 内心欲望
 
-比如一开始你觉得有辆小车开开就会很幸福，再后来你觉得自己有个80方的小房子就会很幸福s
+比如一开始你觉得有辆小车开开就会很幸福，再后来你觉得自己有个80方的小房子就会很幸福。
 
 #### 如何树立正确的价值观？  
 
