--- a/_posts/2019-07-11-浅析“三观”.md
+++ b/_posts/2019-07-11-浅析“三观”.md
@@ -113,11 +113,13 @@ tags:
 
 而我觉得，人生观只有一个，就是态度。
 
-我的人生观就很简单，热爱生活。这么简单的一句话，我在不同的阶段都会有不同的理解。
+我的人生观就很简单，热爱生活，热爱并悦纳苦乐生活。这么简单的一句话，我在不同的阶段都有不同的理解和行动。
 
+有时候想，如果我少胳膊断腿的，我还能这么热爱吗？
 
+真正的热爱，不是在顺风顺水的时候，而是在你遇到艰难险阻甚至于迫害的时候，所体现出来的精神。
 
-我的人生观就很简单，热爱生活，热爱并悦纳苦乐生活。这么简单的一句话，我在不同的阶段都有不同的理解和行动，有时候想，如果我少胳膊断腿的，我还能这么热爱吗？真正的热爱，不是在顺风顺水的时候，而是在你遇到艰难险阻甚至于迫害的时候，所体现出来的精神，就像电影《美丽人生》，讲述了意大利一对犹太父子被送进纳粹集中营，父亲不忍年仅五岁的儿子饱受惊恐，利用自己丰富的想像力扯谎说他们正身处一个游戏当中，必须接受集中营中种种规矩以换得分数赢取最后大奖。身处那样的恐怖环境之中，这位伟大的父亲还能保持如此的乐观，不得不让人折服。
+就像电影《美丽人生》，讲述了意大利一对犹太父子被送进纳粹集中营，父亲不忍年仅五岁的儿子饱受惊恐，利用自己丰富的想像力扯谎说他们正身处一个游戏当中，必须接受集中营中种种规矩以换得分数赢取最后大奖。身处那样的恐怖环境之中，这位伟大的父亲还能保持如此的乐观，不得不让人折服。
 
 <br/>
 
@@ -159,7 +161,7 @@ tags:
 
 <br/>
 
-在美国，左右党派观点之争人所共知。但并不是所有人都能够真正弄清楚到底什么是左右之争，以及左右各自的本质及内核。左派也就是民主党，现任总统奥巴马也是民主党，然而右派呢，就是指共和党。
+在美国，左右党派观点之争人所共知，但并不是所有人都能够真正弄清楚到底什么是左右之争，以及左右各自的本质及内核。左派也就是民主党，现任总统奥巴马也是民主党，然而右派呢，就是指共和党。
 
 举个之前很有名的例子，奥巴马的医疗改革，后来导致美国政府停摆的事件，就能很好的说明两党的核心价值观。
 
