--- a/_posts/2020-03-15-2019年度总结.md
+++ b/_posts/2020-03-15-2019年度总结.md
@@ -1,3 +1,18 @@
+---
+layout: post
+title: "2019年度总结"
+subtitle: "原来年华逝去不是细水长流的，也可能是断崖式的消失不见。"
+date: 2020-03-25
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 生活
+  - 随笔
+  - 总结
+---
+
+
 年前就打算写一下19年的年度总结，没想到拖了这么久。
 
 18年的年度总结的关键词是：[『平淡无奇』](https://www.jianshu.com/p/438825880b6e)
