--- a/_posts/2020-06-01-愿我们历尽千帆，归来仍少年.md
+++ b/_posts/2020-06-01-愿我们历尽千帆，归来仍少年.md
@@ -1,3 +1,16 @@
+---
+layout: post
+title: "愿我们历尽千帆，归来仍少年"
+subtitle: "成长是一笔交易，我们都是用朴素的童真与未经人事的洁白交换成长的勇气。"
+date: 2020-06-01
+author: "fsoooo"
+catalog: true
+tags:
+  - 修行
+  - 生活
+  - 随笔
+---
+
 今天是6月1号，国际儿童节。
 
 每年的儿童节，都有一群“超龄儿童”抢着过。
