20230217-重新更新个人博客

--- a/_posts/2020-03-15-2019年度总结.md
+++ b/_posts/2020-03-15-2019年度总结.md
@@ -320,4 +320,4 @@ tags:
 
 后人说起，也只会淡淡提起那年：乙亥末，庚子春，大疫，万人染疾。众皆惶恐，足不出户，举国防疫，数月方休……
 
-![](https://upload-images.jianshu.io/upload_images/6943526-9ab3e8bc3998e680.gif?imageMogr2/auto-orient/strip)
+![](../img/ending.gif)
