--- a/_posts/2020-06-01-愿我们历尽千帆，归来仍少年.md
+++ b/_posts/2020-06-01-愿我们历尽千帆，归来仍少年.md
@@ -153,10 +153,5 @@ tags:
 
 希望每一天，我们内心都有儿童般的单纯美好。
 
-![](https://upload-images.jianshu.io/upload_images/6943526-86583ce1a97a34c1.gif?imageMogr2/auto-orient/strip)
-
-
-
-
-
+![](../img/ending.gif)
 
