--- a/_posts/2021-01-01-来得及or来不及.md
+++ b/_posts/2021-01-01-来得及or来不及.md
@@ -2,7 +2,7 @@
 layout: post
 title: "来的及 or 来不及"
 subtitle: "来得及:成年人的世界，这三个字最奢侈"
-date: 2019-06-03
+date: 2021-01-01
 author: "fsoooo"
 catalog: true
 header-img: "img/1.jpg"
@@ -250,3 +250,5 @@ tags:
 父母想要的，也未必就是日日夜夜的陪伴。
 
 **时常挂念，时常关心，他们需要时，你能稍稍放下手头的工作，多点耐心，少点脾气。**
+
+![](../img/ending.gif)
