--- a/_posts/2023-02-15-莫说相公痴，更有痴似相公者.md
+++ b/_posts/2023-02-15-莫说相公痴，更有痴似相公者.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "莫说相公痴，更有痴似相公者"
+subtitle: "萍水相逢中天涯遇知音的愉悦化解了心中的淡淡愁绪"
+date: 2023-02-15
+author: "fsoooo"
+catalog: true
+tags:
+- 修行
+- 生活
+- 随笔
+- 文学
+---
+>
 > ### 《湖心亭看雪》
 >
 > **——（明）张岱**
@@ -5,8 +19,6 @@
 > **崇祯五年十二月，余住西湖。大雪三日，湖中人鸟声俱绝。是日更定矣，余拏一小舟，拥毳衣炉火，独往湖心亭看雪。雾凇沆砀，天与云与山与水，上下一白。湖上影子，惟长堤一痕、湖心亭一点、与余舟一芥、舟中人两三粒而已。**
 >
 > **到亭上，有两人铺毡对坐，一童子烧酒炉正沸。见余，大喜曰：“湖中焉得更有此人！”拉余同饮。余强饮三大白而别。问其姓氏，是金陵人，客此。及下船，舟子喃喃曰：“莫说相公痴，更有痴似相公者！”**
-
-![img](https://upload-images.jianshu.io/upload_images/6943526-8cb30571067e37df.png?imageMogr2/auto-orient/strip|imageView2/2/w/658/format/webp)
 
 在中国的古典意境理论中，有**有我**之境界，有**无我**之境界。张岱这篇文章可以说是有我之境界的体现。
 
@@ -34,4 +46,4 @@
 
 这就是有我之境，隐而不发，却有无限的深情，无尽的哀伤，都荡漾在时空的寂寞里。
 
-![](https://upload-images.jianshu.io/upload_images/6943526-86583ce1a97a34c1.gif?imageMogr2/auto-orient/strip)
+![](../img/ending.gif)
