--- a/_posts/2023-02-17-重读《记承天寺夜游》.md
+++ b/_posts/2023-02-17-重读《记承天寺夜游》.md
@@ -1,3 +1,17 @@
+---
+layout: post
+title: "重读《记承天寺夜游》"
+subtitle: "希望你无论处于何种情景，也能有一份随缘自适的心境，心里仍然有一轮明月和一个陪你看明月的人"
+date: 2023-02-17
+author: "fsoooo"
+catalog: true
+tags:
+- 修行
+- 生活
+- 随笔
+- 文学
+---
+> 
 > #### 题记
 >
 > 如果说张岱的《湖心亭看雪》是萍水相逢中“更有痴似相公者”的欣喜，那苏轼的《记承天寺夜游》就是历劫而存后“但少闲人如吾两人者耳”的宽慰，正如弘一法师李叔同写下的：天之涯，地之角，知交半零落。一壶浊酒尽余欢，今宵别梦寒。
@@ -14,8 +28,6 @@
 >
 > **何夜无月？ 何处无竹柏？ 但少闲人如吾两人者耳。**
 >
-
-![img](https://upload-images.jianshu.io/upload_images/6943526-854ee83918472109.png?imageMogr2/auto-orient/strip|imageView2/2/w/650/format/webp)
 
 
 从初中读到这篇小文，没有觉得它有多么的特别，一直都只是把它归结于一篇游记，连它的题目也是这样取的。老师平时会说最后两句经常考哦，最后两句表达了作者随缘自适的心态，要全文背诵。然而，当时的我我什么也没看懂.........
@@ -98,4 +110,4 @@
 
 最后，读这篇小文的人，不祝福你万事如意，但是希望你无论处于何种情景，也能有一份随缘自适的心境，心里仍然有一轮明月和一个陪你看明月的人！
 
-![](https://upload-images.jianshu.io/upload_images/6943526-86583ce1a97a34c1.gif?imageMogr2/auto-orient/strip)
+![](../img/ending.gif)
