20230217-重新更新个人博客

--- a/_posts/2019-06-01-孩子，如果有人打你，请务必打回去.md
+++ b/_posts/2019-06-01-孩子，如果有人打你，请务必打回去.md
@@ -180,4 +180,4 @@ tags:
 “打回去”，是给孩子勇气，教会孩子勇敢地面对坏人，成为一个有原则的、善良的、快乐的人。
 
  为人父母，我们理当**让孩子拥有不伤人的教养，但也要有不被伤害的气场**。
- ![](../img/ending.gif)
+ ![](/img/ending.gif)
