--- a/_posts/2019-06-04-悟空：愿你永不知天高地厚.md
+++ b/_posts/2019-06-04-悟空：愿你永不知天高地厚.md
@@ -499,4 +499,4 @@ Carlos通过两个月的不懈寻找，替公司找到了150份退税证据。
 从今往后一万年，你们都会记住我的名字——齐天大圣孙悟空。
 
 **今天，我想说，从今往后一万年，世界一定会记住另一个名字——华为！**
-![](../img/ending.gif)
+![](/img/ending.gif)
