--- a/_posts/2019-07-03-夜市，是关掉滤镜的真实人间.md
+++ b/_posts/2019-07-03-夜市，是关掉滤镜的真实人间.md
@@ -228,4 +228,4 @@ tags:
 ![](https://upload-images.jianshu.io/upload_images/6943526-775ed4b67804f2fa?imageMogr2/auto-orient/strip)
 
 关于夜市，你都有哪些记忆？
-![](../img/ending.gif)
+![](/img/ending.gif)
