--- a/_posts/2019-07-11-浅析“三观”.md
+++ b/_posts/2019-07-11-浅析“三观”.md
@@ -232,4 +232,4 @@ tags:
 
 世界观是一个人价值观的体现，只有树立了正确的价值观，才能正确认识世界。世界是硕大的，本体是渺小的。不论身处什么样的社会，不管处在什么样的位置，都应对世界保持敬畏之心。
 
-![](../img/ending.gif)
+![](/img/ending.gif)
