--- a/_posts/2023-02-05-农民书法家-王传道.md
+++ b/_posts/2023-02-05-农民书法家-王传道.md
@@ -21,21 +21,21 @@ tags:
 其书法苍劲有力、字体饱满瑰丽，气势宏大，给人以美感和力量感，字体中心平稳，笔画舒畅到位，章法布局合理，字体犹如铁画银钩、点画流畅，其线条不轻滑，不漂浮，或力挺万钧或骤然凸起，常常有一种笔断意连，悬空运笔老辣，出锋飞白自然、有着强烈的节奏感和层次感，让人看后印象深刻，意犹未尽！
 
 
-![](../img/shufa/%20(1).jpg)
-![](../img/shufa/%20(2).jpg)
-![](../img/shufa/%20(3).jpg)
-![](../img/shufa/%20(4).jpg)
-![](../img/shufa/%20(5).jpg)
-![](../img/shufa/%20(6).jpg)
-![](../img/shufa/%20(7).jpg)
-![](../img/shufa/%20(8).jpg)
-![](../img/shufa/%20(9).jpg)
-![](../img/shufa/%20(10).jpg)
-![](../img/shufa/%20(11).jpg)
-![](../img/shufa/%20(12).jpg)
-![](../img/shufa/%20(13).jpg)
-![](../img/shufa/%20(14).jpg)
+![](/img/shufa/%20(1).jpg)
+![](/img/shufa/%20(2).jpg)
+![](/img/shufa/%20(3).jpg)
+![](/img/shufa/%20(4).jpg)
+![](/img/shufa/%20(5).jpg)
+![](/img/shufa/%20(6).jpg)
+![](/img/shufa/%20(7).jpg)
+![](/img/shufa/%20(8).jpg)
+![](/img/shufa/%20(9).jpg)
+![](/img/shufa/%20(10).jpg)
+![](/img/shufa/%20(11).jpg)
+![](/img/shufa/%20(12).jpg)
+![](/img/shufa/%20(13).jpg)
+![](/img/shufa/%20(14).jpg)
 
 
 
-![](../img/ending.gif)
+![](/img/ending.gif)
