--- a/_posts/2023-02-05-农民书法家-王传道.md
+++ b/_posts/2023-02-05-农民书法家-王传道.md
@@ -35,7 +35,41 @@ tags:
 ![](/img/shufa/%20(12).jpg)
 ![](/img/shufa/%20(13).jpg)
 ![](/img/shufa/%20(14).jpg)
-
-
+![](/img/shufa/%20(15).jpg)
+![](/img/shufa/%20(16).jpg)
+![](/img/shufa/%20(17).jpg)
+![](/img/shufa/%20(18).jpg)
+![](/img/shufa/%20(19).jpg)
+![](/img/shufa/%20(20).jpg)
+![](/img/shufa/%20(21).jpg)
+![](/img/shufa/%20(22).jpg)
+![](/img/shufa/%20(23).jpg)
+![](/img/shufa/%20(24).jpg)
+![](/img/shufa/%20(25).jpg)
+![](/img/shufa/%20(26).jpg)
+![](/img/shufa/%20(27).jpg)
+![](/img/shufa/%20(28).jpg)
+![](/img/shufa/%20(29).jpg)
+![](/img/shufa/%20(30).jpg)
+![](/img/shufa/%20(31).jpg)
+![](/img/shufa/%20(32).jpg)
+![](/img/shufa/%20(33).jpg)
+![](/img/shufa/%20(34).jpg)
+![](/img/shufa/%20(35).jpg)
+![](/img/shufa/%20(36).jpg)
+![](/img/shufa/%20(37).jpg)
+![](/img/shufa/%20(38).jpg)
+![](/img/shufa/%20(39).jpg)
+![](/img/shufa/%20(40).jpg)
+![](/img/shufa/%20(41).jpg)
+![](/img/shufa/%20(42).jpg)
+![](/img/shufa/%20(43).jpg)
+![](/img/shufa/%20(44).jpg)
+![](/img/shufa/%20(45).jpg)
+![](/img/shufa/%20(46).jpg)
+![](/img/shufa/%20(47).jpg)
+![](/img/shufa/%20(48).jpg)
+![](/img/shufa/%20(49).jpg)
+![](/img/shufa/%20(50).jpg)
 
 ![](/img/ending.gif)
